syntax = "proto3";

package trenical.train;

import "common.proto";//importing del messaggio Train;

option java_multiple_files = true;
option java_package = "com.trenical.grpc.train";
option java_outer_classname = "TrainServiceProto";

// Servizio per la gestione dei ticket ferroviari
service TrainService {
  // Restituisce una lista di anteprime di biglietti compatibili con i criteri di ricerca
  rpc SearchTrainByFilters (TrainSearchRequest) returns (TrainSearchResponse);
}

// Richiesta per ottenere le anteprime dei biglietti
message TrainSearchRequest {
  string departure_station = 1;         // Nome o codice stazione di partenza
  string arrival_station = 2;           // Nome o codice stazione di arrivo
  optional string date = 3;             // Data del viaggio (formato ISO "YYYY-MM-DD")
  optional string time=4;               // Orario del viaggio (formato HH:MM)
  optional int32 passenger_number= 5;   // Numero di passeggeri
  optional bool allow_connection = 6;   // Permettere viaggi con cambi
  optional bool return_ticket=7;        // Permette di selzionare viaggio andata e ritorno
}

// Risposta contenente la lista di anteprime
message TrainSearchResponse {
  repeated trenical.common.TravelSolutionDTO travels = 1;
}

